<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Chaudhary Coaching App</string>
    <string name="name">Name</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="restart_to_update">Restart to update app</string>
    <string name="action_restart">Restart</string>
    <string name="length_text">2nd solution worked for me properly (using singleLine). Also I have tested in OS version: 4.1 and above (till 8.0), its working fine without any crashes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="let_s_learn_anywhere_anytime">Let\'s Learn Anywhere, Anytime</string>
    <string name="email_address">User Name</string>
    <string name="mobile_number">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="continue_label">Continue</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="the_otp_has_been_sent_to_your_mobile_number_and_email_address">The OTP has been sent to \n Your mobile number and email address</string>
    <string name="didn_t_get_the_otp">Didn\'t get the OTP?</string>
    <string name="resend"><u>Resend</u></string>
    <string name="otp_hint">__</string>


    <string name="sfl_default_error">Something went wrong, try again.</string>
    <string name="sfl_default_placeholder_empty">No data here.</string>
    <string name="sfl_default_placeholder_offline">You are offline.</string>
    <string name="sfl_retry">Retry</string>
    <string name="studying">Studying</string>
    <string name="search_hint">What would you like to learn today? Search here.</string>
    <string name="upcoming_live_sessions">Upcoming Live Sessions</string>
    <string name="currently_live_sessions">Currently Live Sessions</string>
    <string name="performance_analysis">Performance Analysis</string>
    <string name="scheduled_test">Scheduled Test</string>
    <string name="video">Video</string>
    <string name="study_material">Study Material</string>
    <string name="ask_your_doubts_here">Ask Your Doubts here..</string>
    <string name="up_next">Up Next</string>
    <string name="notes">Notes</string>
    <string name="others">Others</string>
    <string name="completed_sessions">Completed Sessions</string>
    <string name="pending">Pending</string>
    <string name="clarified">Clarified</string>
    <string name="ask_your_doubts">Ask Your Doubts</string>
    <string name="submit">Submit</string>
    <string name="add_attachment">Add Attachment</string>
    <string name="need_clarity">Need Clarity</string>
    <string name="understood">Understood</string>

    <string name="select_topics">Select Topics</string>
    <string name="pick_some_topics_to_start_practicing">Pick some topics to start practicing</string>
    <string name="show_all_topics">Show All Topics</string>
    <string name="reset">Reset</string>
    <string name="next">Next</string>
    <string name="selected_topics">Selected Topics</string>
    <string name="based_on_the_selected_topics_we_ll_automatically_select_the_nquestions_you_re_weak_in">Based on the selected topics we\'ll automatically select the\nQuestions you\'re Weak In.</string>
    <string name="back">Back</string>
    <string name="instructions">Instructions</string>
    <string name="duration">Duration</string>
    <string name="questions">Questions</string>
    <string name="attempt">Attempt</string>
    <string name="start_practice_test">Start Practice Test</string>
    <string name="save_for_later">Save for Later</string>
    <string name="jump_to_question">Jump to Question</string>
    <string name="all_results">All Results</string>

    <string name="overall_performance">Overall Performance</string>
    <string name="rank_out_of">Out of 0 Students</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="test_txt">Test</string>
    <string name="practice_txt">Practice</string>
    <string name="practice_test_txt">Practice Test</string>
    <string name="attempted_test">Attempted Test</string>
    <string name="time_remaining">Time Remaining</string>
    <string name="qs_completed">Q\'s Completed</string>
    <string name="marked_for_review">Marked for Review</string>
    <string name="mark_for_review">Mark for Review</string>
    <string name="imp_score">Improve Score</string>
    <string name="pause">Pause</string>
    <string name="previous">Back</string>
    <string name="submit_test">Submit Test</string>
    <string name="physics">Physics</string>
    <string name="correct_answer">Correct Answer:</string>
    <string name="question_difficulty">Question Difficulty</string>
    <string name="time_taken_by_you">Time Taken By You</string>
    <string name="time_taken_by_topper">Time Taken By Topper</string>
    <string name="take_test">Take Test</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to Logout?</string>
    <string name="yes">Yes</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Logout</string>
    <string name="appUpdate">Update</string>
    <string name="help_app">Help (App)</string>
    <string name="settings">Settings</string>
    <string name="profile_completion">Profile Completion</string>
    <string name="account_details">Account Details</string>
    <string name="personal_details">Personal Details</string>
    <string name="no_scheduled_test_found">No Scheduled Test Found</string>
    <string name="no_videos_found_please_try_again">No videos found, Please try again.</string>
    <string name="your_overall">Your overall</string>
    <string name="rank">RANK</string>
    <string name="title_activity_video_play">VideoPlayActivity</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="agree">AGREE</string>
    <string name="disagree">DISAGREE</string>
    <string name="wanted_to_take_test_in_offline">Wanted to take test in offline?</string>
    <string name="wanted_to_submit_test_in_offline">Wanted to Submit test in offline?</string>
    <string name="result">Result</string>
    <string name="review">Review</string>
    <string name="no_upcoming_session_found">No Upcoming Session Found</string>
    <string name="no_live_session_found">No Live Session Found</string>
    <string name="no_completed_session_found">No Completed Session Found</string>
    <string name="qr_scanner">QR Scanner</string>
    <string name="phoneno">Phone Number</string>
    <string name="continue_where_you">continue where you left</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confrompswd">Confirm Password</string>
    <string name="signup"> Sign Up</string>

    <string name="usertype1">Select User</string>
    <string-array name="usertype">
        <item>Student</item>
        <item>Institute</item>
    </string-array>


    <string name="track_selection_title">Select tracks</string>

    <string name="unexpected_intent_action">Unexpected intent action: <xliff:g id="action">%1$s</xliff:g></string>

    <string name="error_cleartext_not_permitted">Cleartext HTTP traffic not permitted. See https://exoplayer.dev/issues/cleartext-not-permitted</string>

    <string name="error_generic">Playback failed</string>

    <string name="error_drm_unsupported_before_api_18">DRM content not supported on API levels below 18</string>

    <string name="error_drm_unsupported_scheme">This device does not support the required DRM scheme</string>

    <string name="error_no_decoder">This device does not provide a decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>

    <string name="error_no_secure_decoder">This device does not provide a secure decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>

    <string name="error_querying_decoders">Unable to query device decoders</string>

    <string name="error_instantiating_decoder">Unable to instantiate decoder <xliff:g id="decoder_name">%1$s</xliff:g></string>

    <string name="error_unsupported_video">Media includes video tracks, but none are playable by this device</string>

    <string name="error_unsupported_audio">Media includes audio tracks, but none are playable by this device</string>

    <string name="storage_permission_denied">Permission to access storage was denied</string>

    <string name="sample_list_load_error">One or more sample lists failed to load</string>

    <string name="download_start_error">Failed to start download</string>

    <string name="download_start_error_offline_license">Failed to obtain offline license</string>

    <string name="download_playlist_unsupported">This demo app does not support downloading playlists</string>

    <string name="download_scheme_unsupported">This demo app only supports downloading http streams</string>

    <string name="download_live_unsupported">This demo app does not support downloading live content</string>

    <string name="download_ads_unsupported">IMA does not support offline ads</string>

    <string name="prefer_extension_decoders">Prefer extension decoders</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="learn">Learn</string>
    <string name="previous_year">Previous year Question Papers</string>
    <string name="selected_course">Selected course</string>
    <string name="welcome_back">Welcome Back !</string>
    <string name="login">Log In</string>
    <string name="userName">User Name</string>
    <string name="login_btn">Login</string>
    <string name="termsandCondtions"><![CDATA[Terms & Conditions]]></string>
    <string name="practice_by">Practice By Subjects</string>
    <string name="see_all">See All</string>


    <string name="dd_institute">Institute Name*</string>
    <string name="dd_course">Select Course*</string>
    <string name="dd_branch">Select Branch*</string>
    <string name="dd_batch">Select Batch*</string>
    <string name="dd_subject">Select Subject</string>
    <string name="dd_chapter">Select Chapter</string>
    <string name="dd_topic">Select Topic</string>
    <string name="dd_material">Select Material</string>
    <string name="dd_publish_date">Publish Date</string>
    <string name="dd_publish_time">Publish Time</string>
    <string name="internal_storage">Internal storage</string>
</resources>