<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_20sdp"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatSpinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_8sdp"
        android:background="@drawable/ic_rectangle_new"
        android:layout_marginTop="@dimen/_10sdp"
        android:prompt="@string/sfl_retry"
        android:dropDownSelector="@color/black"
        android:dropDownWidth="wrap_content"
        android:id="@+id/spinnerUserType"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:padding="@dimen/_8sdp"
        android:background="@drawable/ic_rectangle_new"
        android:hint="@string/name"
        android:id="@+id/userName"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:padding="@dimen/_8sdp"
        android:inputType="number"
        android:background="@drawable/ic_rectangle_new"
        android:hint="@string/phoneno"
        android:id="@+id/phoneNumber"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:padding="@dimen/_8sdp"
        android:id="@+id/emailUser"
        android:background="@drawable/ic_rectangle_new"
        android:hint="@string/email"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:padding="@dimen/_8sdp"
        android:background="@drawable/ic_rectangle_new"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:id="@+id/password"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:padding="@dimen/_8sdp"
        android:inputType="textPassword"
        android:background="@drawable/ic_rectangle_new"
        android:hint="@string/confrompswd"
        android:id="@+id/confrompswd"/>

        <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40sdp"
        android:padding="@dimen/_8sdp"
        android:text="@string/submit"
            android:textAllCaps="false"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/White"
        android:background="@drawable/ic_rect_btn"
        android:id="@+id/sbtbtn"/>

</androidx.appcompat.widget.LinearLayoutCompat>