<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/window_background"
    android:paddingBottom="@dimen/_32sdp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/arrow"
        android:layout_width="@dimen/_12sdp"
        android:layout_height="@dimen/_12sdp"
        android:rotation="270"
        android:src="@drawable/ic_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/signOutIcon"
        android:layout_width="@dimen/_48sdp"
        android:layout_height="@dimen/_48sdp"
        android:layout_margin="@dimen/_15sdp"
        android:src="@drawable/ic_logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arrow" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/logOut"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_15sdp"
        android:text="@string/logout"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signOutIcon" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/areYouSure"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_15sdp"
        android:text="@string/are_you_sure_you_want_to_logout"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logOut" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/yesButton"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp"
        android:backgroundTint="@color/carolina_blue"
        android:padding="@dimen/_8sdp"
        android:text="@string/yes"
        android:textAllCaps="false"
        app:cornerRadius="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/areYouSure" />
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="wrap_content"
        android:progressTint="@color/carolina_blue"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/_8sdp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/areYouSure"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_15sdp"
        android:padding="@dimen/_5sdp"
        android:text="@string/cancel"
        android:textColor="@color/carolina_blue"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yesButton" />

</androidx.constraintlayout.widget.ConstraintLayout>