<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/_10sdp"
    android:layout_marginVertical="@dimen/_5sdp"
    app:cardCornerRadius="@dimen/_4sdp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_12sdp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/close"
            android:layout_width="@dimen/_12sdp"
            android:layout_height="@dimen/_12sdp"
            android:src="@drawable/ic_close"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8sdp"
            android:text="@string/wanted_to_take_test_in_offline"
            android:textAlignment="center"
            android:textColor="@color/carolina_blue"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/close" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/actionText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_8sdp"
            android:text="Click on take test and wait for the test to download."
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_12sdp"
            android:padding="@dimen/_3sdp"
            android:text="@string/agree"
            android:textColor="@color/carolina_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/actionText" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/disagree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginVertical="@dimen/_12sdp"
            android:padding="@dimen/_3sdp"
            android:text="@string/disagree"
            android:textColor="@color/carolina_blue"
            app:layout_constraintEnd_toStartOf="@+id/agree"
            app:layout_constraintTop_toBottomOf="@+id/actionText" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
