<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:padding="@dimen/_16sdp"
    android:background="@drawable/bg_drawer"
    android:orientation="vertical">
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/_16sdp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/arrow"
        android:layout_width="@dimen/_12sdp"
        android:layout_height="@dimen/_12sdp"
        android:rotation="270"
        android:visibility="gone"
        android:src="@drawable/ic_app_update"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/signOutIcon"
        android:layout_width="@dimen/_48sdp"
        android:layout_height="@dimen/_48sdp"
        android:layout_margin="@dimen/_15sdp"
        android:src="@drawable/ic_app_update"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arrow" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/TextAppearance.AppCompat.Title"
        android:id="@+id/txtTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/appUpdate"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signOutIcon" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/TextAppearance.AppCompat.Small"
        android:id="@+id/txtContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/are_you_sure_you_want_to_logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

    <ImageView
        style="@style/TextAppearance.AppCompat.Medium"
        android:id="@+id/btnUpdate"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_48sdp"
        android:layout_margin="@dimen/_8sdp"
        android:scaleType="center"
        android:background="@drawable/playstore_download"
        app:layout_constraintEnd_toEndOf="parent"
        android:elevation="@dimen/_5sdp"
        app:elevation="@dimen/_5sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtContent" />
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="wrap_content"
        android:progressTint="@color/carolina_blue"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/_8sdp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtContent"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_15sdp"
        android:padding="@dimen/_5sdp"
        android:visibility="gone"
        android:text="@string/cancel"
        android:textColor="@color/carolina_blue"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUpdate" />

</androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>